--- a/SistemaTickets/src/Vista/Login.fxml
+++ b/SistemaTickets/src/Vista/Login.fxml
@@ -2,11 +2,16 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="sistematickets.LoginController"
-      spacing="10" alignment="CENTER" padding="20">
+      spacing="10" alignment="CENTER">
+
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
 
     <Label text="Inicio de Sesión" style="-fx-font-size: 16px;" />
     <TextField fx:id="txtCorreo" promptText="Correo" />
@@ -15,6 +20,6 @@
     <Button text="Ir a Registro" onAction="#irARegistro" />
     <Button text="Ver Estadísticas" onAction="#verEstadisticas" /> 
     <Button text="Vista Técnico" onAction="#abrirVistaTecnico"/>
-
     <Label fx:id="lblMensaje" textFill="red" />
+
 </VBox>
