--- a/SistemaTickets/src/Vista/RegistroUsuario.fxml
+++ b/SistemaTickets/src/Vista/RegistroUsuario.fxml
@@ -7,11 +7,16 @@
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="sistematickets.RegistroUsuarioController"
-      spacing="10" alignment="CENTER" padding="20">
-    <Label text="Registro de Usuario" style="-fx-font-size: 16px;"/>
-    <TextField fx:id="txtNombre" promptText="Nombre"/>
-    <TextField fx:id="txtCorreo" promptText="Correo"/>
-    <PasswordField fx:id="txtContrasena" promptText="Contraseña"/>
+      spacing="10" alignment="CENTER">
+
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+
+    <Label text="Registro de Usuario" style="-fx-font-size: 16px;" />
+    <TextField fx:id="txtNombre" promptText="Nombre" />
+    <TextField fx:id="txtCorreo" promptText="Correo" />
+    <PasswordField fx:id="txtContrasena" promptText="Contraseña" />
     <Button text="Registrar" onAction="#registrarUsuario"/>
-    <Label fx:id="lblMensaje" textFill="green"/>
+    <Label fx:id="lblMensaje" textFill="green" />
 </VBox>
